big update; forgot to push earlier

--- a/exps/trte_deno/test_shell.cfg
+++ b/exps/trte_deno/test_shell.cfg
@@ -3,28 +3,41 @@ train_cache_version: "v1"
 chkpt_root: "./output/trte_deno/train/checkpoints"
 train_grid:
   type: "mesh"
-  base: "exps/trte_deno/base.cfg"
-  learning: "exps/trte_deno/learning.cfg"
+  base: "/home/gauenk/Documents/packages/spix_paper/exps/trte_deno/base.cfg"
+  learning: "/home/gauenk/Documents/packages/spix_paper/exps/trte_deno/learning.cfg"
   mesh0: null
 test_grid0: 
   fill_train_cfg: True
   fill_train_overwrite: False
-  base: "exps/trte_deno/base.cfg"
+  base: "/home/gauenk/Documents/packages/spix_paper/exps/trte_deno/base.cfg"
   skips:
   - resume_uuid
   - nepochs
+  - dname
+  - seed
   mesh:
     cfg:
-      tag: "v0.02"
+      # tag: "v0.02"
+      tag: "v0.026000000"
       epoch: "latest" # delete me.
       nepochs: "latest"
       save_output: false
       save_root: "./output/trte_deno/results/"
       load_checkpoint: true
-      num_samples: 5
+      num_samples: 0
     group0:
+      dname:
+      - set5
+      - manga109
+      - urban100
+      - b100
+      #
+      # - set14
+      # - bsd68
+      # - bsd500
+    group1:
       seed:
       # - 012
-      # - 123
+      - 123
       # - 234
-      - 345
+      # - 345
