--- a/exps/trte_deno/train.cfg
+++ b/exps/trte_deno/train.cfg
@@ -4,54 +4,79 @@ chkpt_root: "./output/trte_deno/train/checkpoints"
 mesh:
   listed0:
     attn_type:
+    # -- soft --
     - "soft"
-    # - "hard+grad"
-    - "hard"
+    - "soft"
+    - "soft"
+    # -- hard --
+    # - "hard"
+    # - "hard"
+    # - "hard"
+    # -- na --
     - "na"
-  listed8:
     sp_type:
+    # -- soft --
     - "slic"
     - "slic+lrn"
     - "ssn"
+    # -- hard --
+    # - "slic"
+    # - "slic+lrn"
+    # - "ssn"
+    # -- na --
+    - "none" # doesn't matter
   listed1:
+    learn_attn_scale:
+    # - true
+    - false
+  listed2:
     normz_patch:
     - true
-    learn_attn_scale:
-    - true
+    # - false
+  listed3:
     tag:
     - "v0.10"
+    # - "v0.110"
+    # - "v0.1111"
+    # - "v0.1111111"
     mname:
     - "simple_deno"
     dname:
     - "bsd500"
     lname:
     - "deno"
-    # - "deno+spix"
-    # - "spix"
-  listed2:
-    patch_size:
-    - 96
-    # nepochs:
-    # - 20
+  listed4:
+    simple_linear_bias:
+    - true
+    # patch_size:
+    # - 96
+    lr:
+    - 1.0e-4
+    # - 0.05
     nepochs:
     - 200
     decays:
     -
-      - 75
+      - 50
       - 150
-  listed3:
-    spix_loss_type:
-    # - "cross"
-    - "mse"
-    spix_loss_target:
-    # - "seg"
-    - "pix"
-    spix_loss_compat:
-    - 1e-6
-    deno_spix_alpha:
-    - 0.99
+    # -
+    #   - 75
+    #   - 150
+  listed5:
+    # spix_loss_type:
+    # # - "cross"
+    # - "mse"
+    # spix_loss_target:
+    # # - "seg"
+    # - "pix"
+    # spix_loss_compat:
+    # - 1e-6
+    # deno_spix_alpha:
+    # # - 0.99
+    # - 1.0
     dist_type:
     - "l2"
+    - "prod"
   listed6:
     dim:
     - 6
@@ -78,6 +103,7 @@ mesh:
   listed10:
     seed:
     - 123
-    # - 234
     # - 123
+    # - 234
+    # - 345
 
