--- a/exps/trte_deno/train_conv.cfg
+++ b/exps/trte_deno/train_conv.cfg
@@ -2,63 +2,79 @@ base: exps/trte_deno/base.cfg
 learning: exps/trte_deno/learning.cfg
 chkpt_root: "./output/trte_deno/train/checkpoints"
 mesh:
-  listed2:
-    spix_loss_type:
-    - "cross"
-    - "mse"
-    spix_loss_target:
-    - "seg"
-    - "pix"
-  listed5:
-    deno_spix_alpha:
-    - 0.  
-    - 0.5  
-    - 1.
   listed0:
-    spix_loss_compat:
-    - 0.
-    # - 1e-6
-    - 1e-2
-  listed1:
     attn_type:
     - "soft"
+    # - "hard+grad"
+    # - "hard"
+    - "na"
+  listed8:
+    conv_kernel_size:
+    # - # equal
+    #   - 3
+    #   - 1
+    # - # better
+    #   - 1
+    #   - 3
+    # - 3 # slightly better
+    -
+      - 1
+      - 5
+  listed1:
+    net_depth:
+    - 1
     sp_type:
     - "slic+lrn"
-    # - "slic"
-    # - "ssn"
     normz_patch:
-    # - true
-    - false
+    - true
     learn_attn_scale:
     - true
-    dist_type:
-    # - "l2"
-    - "prod"
     tag:
-    - "v1.00"
+    - "v0.10"
     mname:
-    - "simple_deno"
+    - "conv_deno"
     dname:
     - "bsd500"
+    lname:
+    - "deno"
+    # - "deno+spix"
+    # - "spix"
+  listed2:
     patch_size:
     - 96
+    # nepochs:
+    # - 20
     nepochs:
     - 200
     decays:
     -
       - 75
       - 150
+  listed3:
+    spix_loss_type:
+    # - "cross"
+    - "mse"
+    spix_loss_target:
+    # - "seg"
+    - "pix"
+    spix_loss_compat:
+    - 1e-6
+    deno_spix_alpha:
+    - 0.99
+    dist_type:
+    - "l2"
   listed6:
     dim:
     - 6
     sp_nftrs:
     - 3
     sp_niters:
-    - 5
+    - 10
     sp_m:
     - 0.0
     sp_stride:
-    - 14
+    # - 14
+    - 10
     sp_scale:
     - 10.
     # sp_grad_type:
@@ -67,18 +83,14 @@ mesh:
     - "fixed_spix"
     kernel_size:
     - 15
-  listed7:
-    lname:
-    # - "deno"
-    - "deno+spix"
-    # - "spix"
   listed9:
     sigma:
-    - 10
+    # - 10
     # - 20
-    # - 30
+    - 30
   listed10:
     seed:
     - 123
     # - 234
     # - 123
+
